--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.5.0
   shared_preferences: ^2.5.3
+  font_awesome_flutter: ^10.10.0
+  awesome_bottom_bar: ^1.2.4
 
 dev_dependencies:
   flutter_test:
